# lab-1806-torch-backend

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
utils/: chat_backend.py  embedding_backend.py
