[project]
name = "lab-1806-torch-backend"
version = "0.1.0"
description = "Use PyTorch as the backend for Lab 1806 RAG"
readme = "README.md"
requires-python = ">=3.9,<3.12"

# For NPU
dependencies = [
    "attrs==24.2.0",
    "decorator==5.1.1",
    "numpy==1.26.4",
    "psutil==6.0.0",
    "PyYAML==6.0.2",
    "scipy==1.13.1",
    "sympy==1.13.3",
    "torch==2.3.1",
    "torch-npu==2.3.1.post4",
    "transformers==4.41.2",
    "accelerate==0.30.1",
    "huggingface-hub==0.26.3",
    "fastapi>=0.115.6",
    "pydantic>=2.10.5",
    "sentence-transformers>=3.3.1",
    "uvicorn>=0.34.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
